// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer> passes props to DeleteJobModal 1`] = `
<Connect(DumbDeleteJobModal)
  id="id"
/>
`;

exports[`<ModalContainer> passes props to RunJobModal 1`] = `
<Connect(DumbRunJobModal)
  id="id"
/>
`;

exports[`<ModalContainer> renders DeleteJobModal when requested 1`] = `<Connect(DumbDeleteJobModal) />`;

exports[`<ModalContainer> renders RunJobModal when requested 1`] = `<Connect(DumbRunJobModal) />`;

exports[`<ModalContainer> renders nothing when type is null 1`] = `""`;
